# SpaceInvaders

./: .clang-format  .clang-tidy  .gitmodules  CMakeLists.txt
cmake/: base.cmake  libraries.cmake
include/: constants.hpp  engine.hpp
src/: engine.cpp  main.cpp  utils.hpp
src/component/: Direction.hpp  Position.hpp  Renderable.hpp  Sprite.hpp  Tag.hpp  Transform.hpp  Velocity.hpp
src/core/: AssetManager.cpp  AssetManager.hpp  Assets.cpp  Assets.hpp  Engine.cpp  Engine.hpp  EntityFactory.cpp  EntityFactory.hpp  Factory.cpp  Factory.hpp  Game.cpp  Game.hpp
src/system/: draw.cpp  draw.hpp  input.cpp  input.hpp  movement.cpp  movement.hpp  render.cpp  render.hpp  system.hpp
